--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage-landing-page</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="img/Group 5.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -26,7 +28,9 @@
         </div>
     </header>
 
-
+    <!-- =================================
+    section1
+======================================-->
     <section class="intro">
         <div class="container">
             <div class="column2">
@@ -35,7 +39,7 @@
                     better products.</h1>
                 <p class="page-text">Manage makes it simple for software teams to plan day-to-day tasks while keeping
                     the larger team goals in view.</p>
-                <button type="button" class="btn">Request Invite</button>
+                <button type="button" class="btn">Get Started</button>
             </div>
             <div class="column2">
                 <div class="row">
@@ -51,7 +55,9 @@
 
     </section>
 
-
+    <!-- ===============================
+  section2
+====================================-->
     <section class="different">
         <div class="container">
             <div class="row">
@@ -60,32 +66,135 @@
                     <p class="page-text">Manage provides all the functionality your team needs, without the complexity.
                         Our software is tailor-made for modern digital product teams. </p>
                 </div>
+                <div class="row">
+                    <div class="column2">
 
-                <div class="column2">
-                    <ul class="ordered-list">
-                        <h3 class="order-title"> <span class="number">01</span> Track company-wide progress</h3>
-                        <p class="list-items">See how your day-to-day tasks fit into the wider vision. Go from tracking
-                            progress at the milestone level all the way done to the smallest of details. Never lose
-                            sight of
-                            the bigger picture again.</p>
-                    </ul>
-                    <ul class="ordered-list">
-                        <h3 class="order-title"> <span class="number">02</span> Advanced built-in reports</h3>
-                        <p class="list-items">Set internal delivery estimates and track progress toward company goals.
-                            Our
-                            customisable dashboard helps you build out the reports you need to keep key stakeholders
-                            informed.</p>
-                    </ul>
-                    <ul class="ordered-list">
-                        <h3 class="order-list"><span class="number">03</span> Everything you need in one place</h3>
-                        <p class="list-items">Stop jumping from one service to another to communicate, store files,
-                            track
-                            tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
-                    </ul>
+                        <ul class="ordered-list">
+                            <h3 class="order-title"> <span class="number">01</span> Track company-wide progress</h3>
+                            <p class="list-items">See how your day-to-day tasks fit into the wider vision. Go from
+                                tracking
+                                progress at the milestone level all the way done to the smallest of details. Never lose
+                                sight of
+                                the bigger picture again.</p>
+                        </ul>
+                        <ul class="ordered-list">
+                            <h3 class="order-title"> <span class="number">02</span> Advanced built-in reports</h3>
+                            <p class="list-items">Set internal delivery estimates and track progress toward company
+                                goals.
+                                Our
+                                customisable dashboard helps you build out the reports you need to keep key stakeholders
+                                informed.</p>
+                        </ul>
+                        <ul class="ordered-list">
+                            <h3 class="order-list"><span class="number">03</span> Everything you need in one place</h3>
+                            <p class="list-items">Stop jumping from one service to another to communicate, store files,
+                                track
+                                tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
+                        </ul>
 
+                    </div>
+                </div>
+
+    </section>
+    <!-- =============================
+  section3
+====================================-->
+
+    <section class="comment">
+        <div class="container">
+            <h2 class="said">What they’ve said</h2>
+        </div>
+        <div class="row">
+            <div class="column3">
+                <img class="profile" src="./img/Oval1.jpg" alt="profile">
+                <h3 class="name">Anisha Li</h3>
+                <p class="mind"> “Manage has supercharged our team’s workflow. The ability to maintain visibility on
+                    larger milestones at all times keeps everyone motivated.”</p>
+            </div>
+            <div class="column3">
+                <img class="profile" src="./img/Oval2.jpg" alt="profile">
+                <h3 class="name">Ali Bravo</h3>
+                <p class="mind">“We have been able to cancel so many other subscriptions since using Manage. There
+                    is no
+                    more cross-channel confusion and everyone is much more focused.”</p>
+            </div>
+            <div class="column3">
+                <img class="profile" src="./img/Oval3.jpg" alt="profile">
+                <h3 class="name">Richard Watts</h3>
+                <p class="mind">“Manage allows us to provide structure and process. It keeps us organized and
+                    focused. I
+                    can’t stop recommending them to everyone I talk to!”</p>
+
+            </div>
+
+
+        </div>
+        <div class="button-start">
+            <button type="button" class="btn">Get Started</button>
+        </div>
+
+
+    </section>
+
+    <!-- =================================
+    section4
+    ========================================-->
+
+    <section class="simplify">
+        <div class="container">
+            <div class="row">
+                <h2 class="team">Simplify how your team works today.</h2>
+                <button type="button" class="get">Get Started</button>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- ===============================
+     footer
+    =====================================-->
+
+
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="column4">
+                    <div>
+                        <a href="index.tml"><img class="footer-icon" src="./img/Group 6 (1).png" alt="logo"></a>
+                        <div class="social-media">
+                            <a href="facebook.com"><i class="fab fa-facebook-square"></i></a>
+                            <a href="youtube.com"><i class="fab fa-youtube"></i></a>
+                            <a href="twitter.com"><i class="fab fa-twitter"></i></a>
+                            <a href="pointerest.com"><i class="fab fa-pinterest"></i></a>
+                            <a href="instagram.com"> <i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="column4">
+                    <ul class="footer-links">
+                        <ol class="link-list"><a class="footer-menu" href="Home">Home</a></ol>
+                        <ol class="link-list"><a class="footer-menu" href="Pricing">Pricing</a></ol>
+                        <ol class="link-list"><a class="footer-menu" href="Products">Products</a></ol>
+                        <ol class="link-list"><a class="footer-menu" href="About Us">About Us</a></ol>
+                    </ul>
+                </div>
+                <div class="column4">
+                    <ul class="footer-links">
+                        <ol class="link-list"><a class="footer-menu" href="Careers">Careers</a></ol>
+                        <ol class="link-list"><a class="footer-menu" href="Community">Community</a></ol>
+                        <ol class="link-list"><a class="footer-menu" href="Privacy Policy">Privacy Policy</a></ol>
+                    </ul>
+                </div>
+                <div class="column4">
+                    <input class="mail" type="text" id="name" name="mail" placeholder="Updates in your inbox…">
+                    <button class=btn-go>Go</button>
+                    <p class="reserved"> Copyright 2020. All Rights Reserved</p>
                 </div>
             </div>
         </div>
+    </footer>
 </body>
 
 </html>
