--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="img/Group 5.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
     <header class="main-header">
         <div class="container">
             <div class="row">
-                <a href="#" class="logo"><img src="./img/logo.svg" alt="Manage-logo"></a>
+                <a href="#" class="logo"><img class="logo1" src="./img/logo.svg" alt="Manage-logo"></a>
+                <button class="main-toggle"><img src="./img/Group.svg" alt="toggle"></button>
                 <nav class="main-nav">
+                    
                     <a href="#" class="main-nav-link">Pricing</a>
                     <a href="#" class="main-nav-link">Product</a>
                     <a href="#" class="main-nav-link">About Us</a>
@@ -39,8 +42,8 @@
                     better products.</h1>
                 <p class="page-text">Manage makes it simple for software teams to plan day-to-day tasks while keeping
                     the larger team goals in view.</p>
-                <button type="button" class="btn">Get Started</button>
-            </div>
+                    <button type="button" class="btn">Get Started</button>
+                </div>
             <div class="column2">
                 <div class="row">
                     <img class="photo1" src="./img/Group 26.jpg" alt="diograms">
@@ -86,7 +89,7 @@
                                 informed.</p>
                         </ul>
                         <ul class="ordered-list">
-                            <h3 class="order-list"><span class="number">03</span> Everything you need in one place</h3>
+                            <h3 class="order-title"><span class="number">03</span> Everything you need in one place</h3>
                             <p class="list-items">Stop jumping from one service to another to communicate, store files,
                                 track
                                 tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
@@ -161,7 +164,7 @@
             <div class="row">
                 <div class="column4">
                     <div>
-                        <a href="index.tml"><img class="footer-icon" src="./img/Group 6 (1).png" alt="logo"></a>
+                        <!-- <a href="index.tml"><img class="footer-icon" src="./img/Group 6 (1).png" alt="logo"></a> -->
                         <div class="social-media">
                             <a href="facebook.com"><i class="fab fa-facebook-square"></i></a>
                             <a href="youtube.com"><i class="fab fa-youtube"></i></a>
