--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 ======================================-->
     <section class="intro">
         <div class="container">
-            <div class="column2">
+            <div class="column2"> 
                 <h1 class="main-title">Bring everyone
                     together to build
                     better products.</h1>
@@ -44,7 +44,7 @@
                     the larger team goals in view.</p>
                     <button type="button" class="btn">Get Started</button>
                 </div>
-            <div class="column2">
+            <div class="column2 pro">
                 <div class="row">
                     <img class="photo1" src="./img/Group 26.jpg" alt="diograms">
                     <img class="photo1" src="./img/Group 28.jpg" alt="diogram2">
@@ -61,10 +61,10 @@
     <!-- ===============================
   section2
 ====================================-->
-    <section class="different">
+    <section class="different ">
         <div class="container">
-            <div class="row">
-                <div class="column2">
+            <div class="row " >
+                <div class="column2 ">
                     <h2 class="page-title">What’s different about Manage?</h2>
                     <p class="page-text">Manage provides all the functionality your team needs, without the complexity.
                         Our software is tailor-made for modern digital product teams. </p>
@@ -162,9 +162,9 @@
     <footer class="main-footer">
         <div class="container">
             <div class="row">
-                <div class="column4">
+                <div class="column4 ficon">
                     <div>
-                        <!-- <a href="index.tml"><img class="footer-icon" src="./img/Group 6 (1).png" alt="logo"></a> -->
+                        <a href="index.tml"><img class="footer-icon" src="./img/Group 6 (1).png" alt="logo"></a>
                         <div class="social-media">
                             <a href="facebook.com"><i class="fab fa-facebook-square"></i></a>
                             <a href="youtube.com"><i class="fab fa-youtube"></i></a>
@@ -175,22 +175,22 @@
                     </div>
 
                 </div>
-                <div class="column4">
-                    <ul class="footer-links">
+                <div class="column4 flink">
+                    <ul class="footer-links ">
                         <ol class="link-list"><a class="footer-menu" href="Home">Home</a></ol>
                         <ol class="link-list"><a class="footer-menu" href="Pricing">Pricing</a></ol>
                         <ol class="link-list"><a class="footer-menu" href="Products">Products</a></ol>
                         <ol class="link-list"><a class="footer-menu" href="About Us">About Us</a></ol>
                     </ul>
                 </div>
-                <div class="column4">
-                    <ul class="footer-links">
+                <div class="column4 flink">
+                    <ul class="footer-links ">
                         <ol class="link-list"><a class="footer-menu" href="Careers">Careers</a></ol>
                         <ol class="link-list"><a class="footer-menu" href="Community">Community</a></ol>
                         <ol class="link-list"><a class="footer-menu" href="Privacy Policy">Privacy Policy</a></ol>
                     </ul>
                 </div>
-                <div class="column4">
+                <div class="column4 email">
                     <input class="mail" type="text" id="name" name="mail" placeholder="Updates in your inbox…">
                     <button class=btn-go>Go</button>
                     <p class="reserved"> Copyright 2020. All Rights Reserved</p>
