--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="container">
             <div class="row">
                 <a href="#" class="logo"><img class="logo1" src="./img/logo.svg" alt="Manage-logo"></a>
-                <button class="main-toggle open" onclick="openMenu()"><img src="./img/Group.svg" alt="toggle"></button>
-                <button class="main-toggle close" onclick="closeMenu()"><img src="./img/close.svg" alt=""></button>
+                <button class="menu-toggle open" onclick="openMenu()"><img src="./img/Group.svg" alt="toggle"></button>
+                <button class="menun-toggle close" onclick="closeMenu()"><img src="./img/close.svg" alt=""></button>
                 <nav id="mainnav" class="main-nav">
                     
                     <a href="#" class="main-nav-link">Pricing</a>
